Refactor with additional interfaces (#14)
* move /lib/notion/openApi -> /lib/notion/api/openApi

* refactor asset.ts

* tweak

* tweak

* Remove default export

* tweak

* refactor queryCollection.ts

* Add ArticleTable

* tweak openapi

* tweak

* tweak

* refactor

* tweak
